crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__lang-marker.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng",
          "zho"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng, zho",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng, zho",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "23-JUL-1964",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "@s, default: round trip will generate explicit",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "hey",
                  "type": "text"
                }
              ],
              "raw_text": "hey",
              "span": {
                "end": 248,
                "start": 245
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "there",
                  "type": "text"
                }
              ],
              "raw_text": "there",
              "span": {
                "end": 254,
                "start": 249
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "span": {
                "end": 259,
                "start": 255
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 262,
                "start": 260
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "hao3",
                  "type": "text"
                }
              ],
              "lang": {
                "type": "shortcut"
              },
              "raw_text": "hao3@s",
              "span": {
                "end": 269,
                "start": 263
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "@s, one explicit lang",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "hey",
                  "type": "text"
                }
              ],
              "raw_text": "hey",
              "span": {
                "end": 313,
                "start": 310
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "there",
                  "type": "text"
                }
              ],
              "raw_text": "there",
              "span": {
                "end": 319,
                "start": 314
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "span": {
                "end": 324,
                "start": 320
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 327,
                "start": 325
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "hao3",
                  "type": "text"
                }
              ],
              "lang": {
                "code": "zho",
                "type": "explicit"
              },
              "raw_text": "hao3@s:zho",
              "span": {
                "end": 338,
                "start": 328
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "@s, two langs",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "hey",
                  "type": "text"
                }
              ],
              "raw_text": "hey",
              "span": {
                "end": 374,
                "start": 371
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "there",
                  "type": "text"
                }
              ],
              "raw_text": "there",
              "span": {
                "end": 380,
                "start": 375
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "span": {
                "end": 385,
                "start": 381
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 388,
                "start": 386
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "hao3",
                  "type": "text"
                }
              ],
              "lang": {
                "code": [
                  "eng",
                  "zho",
                  "fra"
                ],
                "type": "multiple"
              },
              "raw_text": "hao3@s:eng+zho+fra",
              "span": {
                "end": 407,
                "start": 389
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "@s, two langs, ambiguous",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "hey",
                  "type": "text"
                }
              ],
              "lang": {
                "code": "spa",
                "type": "explicit"
              },
              "raw_text": "hey@s:spa",
              "span": {
                "end": 460,
                "start": 451
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "there",
                  "type": "text"
                }
              ],
              "raw_text": "there",
              "span": {
                "end": 466,
                "start": 461
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "span": {
                "end": 471,
                "start": 467
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 474,
                "start": 472
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "hao3",
                  "type": "text"
                }
              ],
              "lang": {
                "code": [
                  "eng",
                  "zho",
                  "fra"
                ],
                "type": "ambiguous"
              },
              "raw_text": "hao3@s:eng&zho&fra",
              "span": {
                "end": 493,
                "start": 475
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng, zho",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng, zho",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
