crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__language-switching.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng",
    "zho"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng",
          "zho"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng",
          "zho"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng",
          "zho"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Language switching: [- lang] utterance-level, @s word-level,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "multi-language codes with + and &",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: language_code in inline context, @s form markers",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "我",
              "content": [
                {
                  "content": "我",
                  "type": "text"
                }
              ],
              "raw_text": "我",
              "type": "word"
            },
            {
              "cleaned_text": "要",
              "content": [
                {
                  "content": "要",
                  "type": "text"
                }
              ],
              "raw_text": "要",
              "type": "word"
            },
            {
              "cleaned_text": "吃",
              "content": [
                {
                  "content": "吃",
                  "type": "text"
                }
              ],
              "raw_text": "吃",
              "type": "word"
            }
          ],
          "language_code": "zho",
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "hey",
              "content": [
                {
                  "content": "hey",
                  "type": "text"
                }
              ],
              "raw_text": "hey",
              "type": "word"
            },
            {
              "cleaned_text": "there",
              "content": [
                {
                  "content": "there",
                  "type": "text"
                }
              ],
              "raw_text": "there",
              "type": "word"
            },
            {
              "cleaned_text": "what",
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "type": "word"
            },
            {
              "cleaned_text": "is",
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "type": "word"
            },
            {
              "cleaned_text": "hao3",
              "content": [
                {
                  "content": "hao3",
                  "type": "text"
                }
              ],
              "lang": {
                "type": "shortcut"
              },
              "raw_text": "hao3@s",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "hey",
              "content": [
                {
                  "content": "hey",
                  "type": "text"
                }
              ],
              "raw_text": "hey",
              "type": "word"
            },
            {
              "cleaned_text": "there",
              "content": [
                {
                  "content": "there",
                  "type": "text"
                }
              ],
              "raw_text": "there",
              "type": "word"
            },
            {
              "cleaned_text": "what",
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "type": "word"
            },
            {
              "cleaned_text": "is",
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "type": "word"
            },
            {
              "cleaned_text": "hao3",
              "content": [
                {
                  "content": "hao3",
                  "type": "text"
                }
              ],
              "lang": {
                "code": "zho",
                "type": "explicit"
              },
              "raw_text": "hao3@s:zho",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "hey",
              "content": [
                {
                  "content": "hey",
                  "type": "text"
                }
              ],
              "raw_text": "hey",
              "type": "word"
            },
            {
              "cleaned_text": "there",
              "content": [
                {
                  "content": "there",
                  "type": "text"
                }
              ],
              "raw_text": "there",
              "type": "word"
            },
            {
              "cleaned_text": "what",
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "type": "word"
            },
            {
              "cleaned_text": "is",
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "type": "word"
            },
            {
              "cleaned_text": "hao3",
              "content": [
                {
                  "content": "hao3",
                  "type": "text"
                }
              ],
              "lang": {
                "code": [
                  "eng",
                  "zho",
                  "fra"
                ],
                "type": "multiple"
              },
              "raw_text": "hao3@s:eng+zho+fra",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "hey",
              "content": [
                {
                  "content": "hey",
                  "type": "text"
                }
              ],
              "lang": {
                "code": "spa",
                "type": "explicit"
              },
              "raw_text": "hey@s:spa",
              "type": "word"
            },
            {
              "cleaned_text": "there",
              "content": [
                {
                  "content": "there",
                  "type": "text"
                }
              ],
              "raw_text": "there",
              "type": "word"
            },
            {
              "cleaned_text": "what",
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "type": "word"
            },
            {
              "cleaned_text": "is",
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "type": "word"
            },
            {
              "cleaned_text": "hao3",
              "content": [
                {
                  "content": "hao3",
                  "type": "text"
                }
              ],
              "lang": {
                "code": [
                  "eng",
                  "zho",
                  "fra"
                ],
                "type": "ambiguous"
              },
              "raw_text": "hao3@s:eng&zho&fra",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng",
          "zho"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng",
          "zho"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
